classDiagram
    class WeatherForecastJapanese {
        +main(String[] args)
    }
    class WeatherApiClient {
        +getWeatherForecast(WeatherData, int): JSONObject
    }
    class WeatherData {
        +getName(): String
        +getLatitude(): double
        +getLongitude(): double
        +UranaiUtil
        +MyImageUtil
        +WeatherUtil
    }
    class WeatherMethodlist {
        +printUranai(): String
        +printWeather(int): String
        +getWeatherImagePath(String): String
        +getSeizaImageFile(String): String
        +getPrefImagePathByData(WeatherData): String
        +getWeatherHtmlTable(WeatherData): String
    }
    WeatherForecastJapanese --> WeatherApiClient : uses
    WeatherForecastJapanese --> WeatherData : uses
    WeatherForecastJapanese --> WeatherMethodlist : uses
    WeatherApiClient --> WeatherData : uses
    WeatherData o-- WeatherData.UranaiUtil
    WeatherData o-- WeatherData.MyImageUtil
    WeatherData o-- WeatherData.WeatherUtil
